js/src/tests/test262/language/statements/class/elements/syntax/early-errors/invalid-names/method-member-expression-bad-reference.js
DONOTEVALUATE
(
)
;
class
C
{
m
(
)
{
something
.
#
x
}
}
